# nanoMesh

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/lib/: commons.h  mesh.cpp  mesh.h  texture.cpp  texture.h
src/lib/shaders/: simple_shader.frag  simple_shader.vert
